# Flam_Assigment

./: README.md
Flam_ctl/: .gitignore  README.md  SETUP.md  demo.py  demo_live.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  verify.py
Flam_ctl/queuectl/: __init__.py  cli.py  config.py  database.py  models.py  queue.py  worker.py
Flam_ctl/tests/: test_integration.py  test_queuectl.py
