[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "1.0.0"
description = "CLI-based background job queue system"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
queuectl = "queuectl.cli:main"
